show backup Item list from main activity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -110,4 +110,6 @@
 
     <string name="stopUpload">Stop Upload</string>
 
+    <string name="viewBakItemBtn">Show Backup Items</string>
+
 </resources>
