refresh backup item list

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -112,4 +112,6 @@
 
     <string name="viewBakItemBtn">Show Backup Items</string>
 
+    <string name="resetBtn">Reset All</string>
+
 </resources>
